--- a/src/app/(frontend)/components/global/Footer/Footer.css
+++ b/src/app/(frontend)/components/global/Footer/Footer.css
@@ -31,7 +31,10 @@ footer .container {
   padding-top: 20px !important;
   padding-bottom: 20px !important;
 }
-
+ul.social-icon {
+  padding: 0;
+  display: flex;
+}
 }
 @media only screen and (max-width: 575px){
   ul.social-icon {
