--- a/src/app/(frontend)/components/global/Footer/Footer.css
+++ b/src/app/(frontend)/components/global/Footer/Footer.css
@@ -9,3 +9,74 @@ footer p {
   footer {
     background: #161616 !important;
 }
+a.youtube-link {
+  display: none;
+}
+
+@media only screen and (max-width: 768px){
+  a.youtube-link {
+    display: block;
+}
+ul.social-icon a.p-md-3 {
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
+}
+.ul.social-icon {
+  padding: 0;
+  display: flex;
+  align-items: center;
+  margin: 0 !important;
+}
+footer .container {
+  padding-top: 20px !important;
+  padding-bottom: 20px !important;
+}
+
+}
+@media only screen and (max-width: 575px){
+  ul.social-icon {
+    gap: 13px;
+}
+
+footer .col-md-6.col-7.text-md-start.text-start {
+    width: 80%;
+    order: 3;
+}
+
+footer p {
+    font-size: 10px !important;
+}
+
+.footer-menu li {
+    padding: 0;
+    text-align: right !important;
+}
+
+footer .row.align-items-center {
+    align-items: end !important;
+}
+.footer-menu li{
+  padding: 0px !important;
+}
+footer .container{
+  padding-left: 16px !important;
+  padding-right: 16px !important;
+}
+footer .col-md-4.col-1.text-center {
+    width: 20%;
+    order: 2;
+}
+
+footer .col-md-2.col-4.text-md-end.text-end {
+    order: 1;
+    width: 80%;
+    margin-bottom: 10px;
+}
+
+.footer-menu ul {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 12px;
+    justify-content: end;
+}
+}
