--- a/src/app/(frontend)/components/pages/blogs/Blog.css
+++ b/src/app/(frontend)/components/pages/blogs/Blog.css
@@ -517,6 +517,9 @@ button.more-btn img {
         order: 2;
         line-height: normal;
     }
+    small.text-muted p {
+        margin: 0;
+    }
     section.blog-banner {
         position: relative;
         height: 200px;
