--- a/src/app/(frontend)/components/pages/blogs/Blog.css
+++ b/src/app/(frontend)/components/pages/blogs/Blog.css
@@ -34,14 +34,15 @@ small.text-muted p {
     line-height: 100%;
     letter-spacing: 0;
     color: #a2a2a2;
-    margin-bottom: 20px;
+    margin-bottom: 12px;
 }
 
 h5.card-title {
     font-weight: 400;
     font-size: 24px;
     letter-spacing: -1px;
-    margin-bottom: 20px;
+    margin-bottom: 12px;
+    line-height: 1.3;
 }
 
 p.card-text {
@@ -181,7 +182,7 @@ p.featured-date {
     color: #a2a2a2 !important;
     font-family: Inter;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 16px !important;
     line-height: 1.3;
 }
 p.featured-date {
