--- a/src/app/(frontend)/components/pages/home/Banner.css
+++ b/src/app/(frontend)/components/pages/home/Banner.css
@@ -268,6 +268,39 @@ section.white-bg .row {
 .footer-menu ul {
   padding: 0;
 }
+.feature-box p {
+  font-weight: 400;
+  line-height: 1.3;
+}
+p.technology-content {
+  max-width: 892px;
+  margin: auto;
+  color: #A2A2A2;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.3;
+  margin-bottom: 30px;
+}
+.eliminate-content h2 {
+  padding-bottom: 24px !important;
+  margin: 0 !important;
+  line-height: 1.1;
+}
+
+.About-content p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  color: #A2A2A2;
+  max-width: 970px;
+  margin: auto;
+  margin-bottom: 12px;
+}
+
+.About-content {
+  padding-top: 12px;
+}
 @media only screen and (max-width: 1300px) {
   .feature-box h2 {
       font-size: 28px;
@@ -330,9 +363,6 @@ section.white-bg .row {
 
 @media only screen and (max-width: 991px) {
 
-  header ul.menu li:first-child {
-    margin-top: 20px;
-}
   .banner-content h2 {
       font-size: 18px;
       letter-spacing: -1px;
@@ -632,8 +662,18 @@ h2.autonomous-title {
     font-size: 16px;
     max-width: 300px;
 }
-
+p.technology-content{
+  font-size: 14px;
+}
 .support-box p {
     font-size: 14px;
+}
+.eliminate-content h2 {
+  padding-bottom: 10px !important;
+  line-height: normal;
+}
+.About-content p {
+  font-size: 14px;
+  line-height: 18px;
 }
 }
