--- a/src/app/(frontend)/components/pages/blogs/Blog.css
+++ b/src/app/(frontend)/components/pages/blogs/Blog.css
@@ -529,6 +529,32 @@ button.btn.view-more img{
         letter-spacing: 0 !important;
     }
 }
+
+/* new for category tab */
+.blog-tabs {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-bottom: 1rem;
+  }
+  
+  .tab-btn {
+    padding: 6px 12px;
+    background-color: transparent;
+    border: 1px solid #ccc;
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+  
+  .tab-btn.active {
+    background-color: #161616;
+    border-color: #a2a2a2;
+    color: #a2a2a2;
+  }
+
+  
 @media only screen and (min-width: 576px) and (max-width: 991px) {
 
     p.featured-date {
